--- a/GitHub4WinRT.App/App.xaml
+++ b/GitHub4WinRT.App/App.xaml
@@ -1,6 +1,7 @@
 ﻿<tumbaga:AppBootstrapper x:Class="GitHub4WinRT.App.App"
                          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                         RequestedTheme="Light"
                          xmlns:tumbaga="using:Tumbaga">
     <Application.Resources>
         <ResourceDictionary Source="/Assets/StandardStyles.xaml" />
