--- a/GitHub4WinRT.App/Assets/StandardStyles.xaml
+++ b/GitHub4WinRT.App/Assets/StandardStyles.xaml
@@ -1417,8 +1417,13 @@
         <Setter Property="Margin" Value="0,0,0,40" />
     </Style>
 
-    <Style x:Key="SnappedPageHeaderTextStyle" TargetType="TextBlock" BasedOn="{StaticResource PageSubheaderTextStyle}">
-        <Setter Property="Margin" Value="0,0,18,40" />
+    <Style x:Key="SnappedPageHeaderStyle" TargetType="Image">
+        <Setter Property="Margin" Value="0,40,18,0" />
+        <Setter Property="RenderTransform">
+            <Setter.Value>
+                <ScaleTransform ScaleX="0.7" ScaleY="0.7"  CenterX="0.5"/>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <!--
@@ -1554,7 +1559,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Grid x:Name="RootGrid" Width="36" Height="36" Margin="-3,0,7,33">
+                    <Grid x:Name="RootGrid" Width="36" Height="36" Margin="-3,0,7,37">
                         <Grid Margin="-1,-1,0,0">
                             <TextBlock x:Name="BackgroundGlyph" Text="&#xE0D4;" Foreground="{StaticResource BackButtonBackgroundThemeBrush}" />
                             <TextBlock x:Name="NormalGlyph" Text="{StaticResource BackButtonSnappedGlyph}" Foreground="{StaticResource BackButtonForegroundThemeBrush}" />
@@ -1818,7 +1823,11 @@
     <!-- Page layout roots typically use entrance animations and a theme-appropriate background color -->
 
     <Style x:Key="LayoutRootStyle" TargetType="Panel">
-        <Setter Property="Background" Value="{StaticResource ApplicationPageBackgroundThemeBrush}" />
+        <Setter Property="Background">
+            <Setter.Value>
+                <SolidColorBrush Color="#BFD2FF"></SolidColorBrush>
+            </Setter.Value>
+        </Setter>
         <Setter Property="ChildrenTransitions">
             <Setter.Value>
                 <TransitionCollection>
