--- a/GitHub4WinRT.App/Assets/StandardStyles.xaml
+++ b/GitHub4WinRT.App/Assets/StandardStyles.xaml
@@ -10,7 +10,7 @@
 
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:converters="using:GitHub4WinRT.App.Converters">
 
     <!-- Non-brush values that vary across themes -->
 
@@ -1421,7 +1421,7 @@
         <Setter Property="Margin" Value="0,40,18,0" />
         <Setter Property="RenderTransform">
             <Setter.Value>
-                <ScaleTransform ScaleX="0.7" ScaleY="0.7"  CenterX="0.5"/>
+                <ScaleTransform ScaleX="0.7" ScaleY="0.7" CenterX="0.5" />
             </Setter.Value>
         </Setter>
     </Style>
@@ -1836,4 +1836,6 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <converters:ObjectToVisibilityConverter x:Key="ObjectToVisibilityConverter" />
 </ResourceDictionary>
