--- a/GitHub4WinRT.App/Views/MainPage.xaml
+++ b/GitHub4WinRT.App/Views/MainPage.xaml
@@ -1,6 +1,6 @@
 <Page x:Class="GitHub4WinRT.App.Views.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="using:GitHub4WinRT.App.Controls">
 
     <Grid Style="{StaticResource LayoutRootStyle}">
         <Grid.RowDefinitions>
@@ -14,12 +14,12 @@
             </Grid.ColumnDefinitions>
             <Button x:Name="BackButton" Style="{StaticResource BackButtonStyle}" IsEnabled="false" />
             <Image x:Name="PageTitle" Grid.Column="1" Source="../Assets/Header.png" Stretch="None" HorizontalAlignment="Left" />
+
         </Grid>
 
-        <StackPanel x:Name="Main" Grid.Row="1" Margin="120,0,0,0">
-            <TextBlock Text="{Binding Path=CurrentUser.Login}" Style="{StaticResource PageSubheaderTextStyle}" />
-            <Image Source="{Binding Path=CurrentUser.AvatarUrl}" Stretch="None" />
-        </StackPanel>
+        <Grid x:Name="Main" Grid.Row="1" Margin="120,0,0,0">
+            <controls:AuthControl x:Name="AuthControl" Grid.Column="2" DataContext="{Binding CurrentUser}" VerticalAlignment="Top" Margin="0,-90,0,0" HorizontalAlignment="Right" />
+        </Grid>
 
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="ApplicationViewStates">
@@ -42,6 +42,12 @@
                         </ObjectAnimationUsingKeyFrames>
                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Main" Storyboard.TargetProperty="Margin">
                             <DiscreteObjectKeyFrame KeyTime="0" Value="20,0,0,0" />
+                        </ObjectAnimationUsingKeyFrames>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="AuthControl" Storyboard.TargetProperty="Margin">
+                            <DiscreteObjectKeyFrame KeyTime="0" Value="0,0,0,0" />
+                        </ObjectAnimationUsingKeyFrames>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="AuthControl" Storyboard.TargetProperty="HorizontalAlignment">
+                            <DiscreteObjectKeyFrame KeyTime="0" Value="Left" />
                         </ObjectAnimationUsingKeyFrames>
                     </Storyboard>
                 </VisualState>
