--- a/GitHub4WinRT.App/Controls/AuthControl.xaml
+++ b/GitHub4WinRT.App/Controls/AuthControl.xaml
@@ -1,21 +1,37 @@
-﻿<UserControl x:Class="GitHub4WinRT.App.Controls.AuthControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Grid Margin="0,0,60,0">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <Border Height="50"
-                Width="50"
-                Grid.RowSpan="2">
-            <Image Source="{Binding AvatarUrl}" Stretch="UniformToFill" />
-        </Border>
-        <TextBlock Grid.Column="1" Text="{Binding Name}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="12,0,0,6" FontSize="20" />
-        <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Email}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="12,0,0,0" FontSize="18" />
-    </Grid>
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="GitHub4WinRT.App.Controls.AuthControl">
+    <UserControl.Resources>
+        <Style x:Key="UserButtonStyle" TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <ContentPresenter x:Name="ContentPresenter" ContentTemplate="{TemplateBinding ContentTemplate}" ContentTransitions="{TemplateBinding ContentTransitions}" Content="{TemplateBinding Content}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
+    <Button Margin="0,0,40,0" Style="{StaticResource UserButtonStyle}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <TextBlock Text="{Binding Name}" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,12,0" FontSize="16" FontWeight="Medium" />
+            <TextBlock Grid.Row="1" Text="{Binding Login}" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,12,0" FontSize="16" />
+            <Border Height="40"
+                    Width="40"
+                    Grid.Column="1"
+                    Grid.RowSpan="2">
+                <Image Source="{Binding AvatarUrl}" Stretch="UniformToFill" />
+            </Border>
+        </Grid>
+    </Button>
 </UserControl>
